tests/sources/invalid/generics/generic_class_template_field_errors.fire
// Field access on an unknown field name inside a generic class template's
// own method body (before any concrete instantiation). This exercises the
// generic_class_templates lookup path for field resolution, distinct from
// the ordinary user_classes lookup used once a concrete instance exists.
copyable class Pair<T, U> {
    first: T;
    second: U;

    fn Pair(first: T, second: U) {
        this.first = first;
        this.second = second;
    }

    fn getBogus(&this) -> T {
        return this.bogus;  //~ ERROR FS-SEM-0010 @21
    }
}

p1: Pair<int32, int32> = Pair<int32, int32>(10, 20);
